# LangtonsAnt

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: static.yml
CMake/: Lib_lodepng.cmake  argparse.cmake
SOURCE/: ArgumentParser.h  Canvas.h  CommandLineInterface.h  Common.h  ConfigParser.h  Configs.h  Direct.cpp  Encoding.h  Entry.cpp  ImageEncoder.h
SOURCE/Types/: Ant.h  EncoderState.h  SimulationState.h  Vector.h
WEBSITE/: index.html
WEBSITE/Scripts/: Ant.js  Classes.js  Debug.js  Main.js  Rendering.js  Utilities.js
WEBSITE/Shaders/: Fragment.frag  Vertex.vert
WEBSITE/Styles/: Main.css
WebVersion/: Index.html  index.html
WebVersion/Scripts/: Ant.js  Main.js  Renderer.js
WebVersion/Shaders/: Fragment.frag  Vertex.vert
WebVersion/Styles/: Main.css
